tweaks tmedia queries to avoid clipping content or scrollbar on certain screen sizes

--- a/client/src/styles/components/_socials.scss
+++ b/client/src/styles/components/_socials.scss
@@ -1,36 +1,60 @@
 @use '../abstracts' as a;
 
 .socials {
-    position: fixed;
-    top: 40%;
-   right: -1%;
-   display: flex;
-   flex-direction: column;
-   z-index: 20;
-   margin: 2em;
-
-
+  position: fixed;
+  top: 40%;
+  right: -10%;
+  display: flex;
+  flex-direction: column;
+  z-index: 20;
+  margin: 2em;
 }
 
 .socials__item {
-    margin: 1em;
-     a {
+  margin: 1em;
+  a {
     color: a.$black;
     transition: all 0.5s ease-in-out;
     &:hover {
-        color: scale-color($color: a.$black,  $lightness: +80%, )
+      color: scale-color($color: a.$black, $lightness: +80%);
     }
+  }
 }
 
+// @media screen and (max-width: 950px) {
+//   .socials {
+//     right: -4%;
+//   }
+// }
 
+@media screen and (min-width: 400px) {
+  .socials {
+    right: -5%;
+  }
+}
+// @media screen and (max-width: 600px) {
+//   .socials {
+//     right: -5%;
+//   }
+// }
+
+@media screen and (min-width: a.$desktop-breakpoint) {
+  .socials {
+    right: -2.5%;
+  }
 }
 
-@media screen and (max-width: a.$md-tablet-breakpoint) {
-    .socials {
-       
-       right: -10%;
-      
-    
-    
-    }   
+@media screen and (max-width: a.$xs-device-breakpoint) {
+  .socials {
+    position: relative;
+    top: -100px;
+    right: 0;
+    z-index: 11;
+    justify-content: center;
+
+    :only-child {
+      display: flex;
+      justify-content: center;
+    }
+  }
 }
